[gd_scene load_steps=7 format=3 uid="uid://b30mqinvev5b3"]

[ext_resource type="Script" uid="uid://duat1ekh0wjim" path="res://scripts/Player.gd" id="1_hqtel"]
[ext_resource type="SpriteFrames" uid="uid://do6xochcykwox" path="res://resources/frames_balanced.tres" id="2_sweqy"]
[ext_resource type="SpriteFrames" uid="uid://bblb82qfdrkbc" path="res://resources/frames_speed.tres" id="3_2hs0m"]
[ext_resource type="SpriteFrames" uid="uid://xhwvmhbfvbv2" path="res://resources/frames_tank.tres" id="4_1jxqw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dw050"]
size = Vector2(63.180523, 133.03)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b26j0"]
size = Vector2(65.15997, 69.22499)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(599.085, 524.345)
slide_on_ceiling = false
script = ExtResource("1_hqtel")
character_class = 2
frames_balanced = ExtResource("2_sweqy")
frames_speed = ExtResource("3_2hs0m")
frames_tank = ExtResource("4_1jxqw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.275, 0)
shape = SubResource("RectangleShape2D_dw050")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-4, -191.89499)

[node name="Anim" type="AnimatedSprite2D" parent="."]
position = Vector2(-84.085045, -125.34497)
scale = Vector2(1.875, 1.973)
sprite_frames = ExtResource("2_sweqy")
animation = &"idle"
centered = false
offset = Vector2(-20.71, -30.24)
flip_h = true

[node name="VoicePlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-63, -103)

[node name="GunPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-62, -103)

[node name="ReloadPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-64, -103)

[node name="HitPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-66, -103)

[node name="FootstepPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-65, -104)

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(62.22, -36.145)

[node name="MeleeHitbox" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeHitbox"]
position = Vector2(66.33502, -5.9574585)
shape = SubResource("RectangleShape2D_b26j0")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.355, -0.345)
shape = SubResource("RectangleShape2D_dw050")

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
[connection signal="area_entered" from="MeleeHitbox" to="." method="_on_melee_hitbox_area_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
